[package]
name = "dynamixel-tool"
version = "1.0.2"
edition = "2018"
authors = ["Mikhail Rudenko <mike.rudenko@gmail.com>"]
description = "Dynamixel test tool"
homepage = "https://gitlab.mobird.dev/pebby/dynamixel-tool"

[dependencies]
anyhow = "^1.0"
clap = { version = "3.1.0", features = ["derive"] }
clap_complete = "3.1.0"
crc = "^2.1"
env_logger = "^0.9"
glob = "^0.3"
itertools = "0.10.3"
json = "^0.12"
lazy_static = "1.4.0"
log = "^0.4"
nix = "^0.23"
regex = "1.5.4"
serialport = "^4"
thiserror = "^1"

[features]
