[package]
name = "dynamixel-tool"
version = "1.1.1"
edition = "2018"
authors = ["Mikhail Rudenko <mike.rudenko@gmail.com>"]
description = "Dynamixel test tool"
homepage = "https://gitlab.mobird.dev/pebby/dynamixel-tool"

[[bin]]
name = "dynamixel-tool"
path = "src/main.rs"

[lib]
name = "dynamixel_utils"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "^1.0"
clap = { version = "3.1.0", features = ["derive"] }
clap_complete = "3.1.0"
crc = "^2.1"
env_logger = "^0.9"
glob = "^0.3"
itertools = "0.10.3"
json = "^0.12"
lazy_static = "1.4.0"
log = "^0.4"
nix = "^0.23"
num = "0.4.0"
regex = "1.5.4"
serialport = "^4"
thiserror = "^1"

[features]
