[package]
name = "dynamixel-lib"
version = "2.0.2"
edition = "2021"
authors = ["Mikhail Rudenko <mike.rudenko@gmail.com>"]
description = "Dynamixel utilities library"
homepage = "https://gitlab.mobird.dev/pebby/dynamixel-tool"

[lib]

[dependencies]
anyhow = "^1.0"
async-trait = "0.1"
crc = "^2.1"
glob = "^0.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "^0.4"
nix = "^0.23"
num-derive = "0.4"
num-traits = "0.2"
regex = "1.5.4"
serialport = "^4"
thiserror = "^1"
tokio = { version = "1", features = ["io-util"] }
tokio-serial = { version = "5", features = ["libudev", "tokio-util"] }

[features]
