[package]
name = "dynamixel-tool"
version = "2.0.2"
edition = "2021"
authors = ["Mikhail Rudenko <mike.rudenko@gmail.com>"]
description = "Dynamixel cli tool"
homepage = "https://gitlab.mobird.dev/pebby/dynamixel-tool"
default-run = "dynamixel-tool"

[dependencies]
anyhow = "^1.0"
clap = { version = "3.1", features = ["derive"] }
clap_complete = "3.1"
dynamixel-lib = { path = "../dynamixel-lib" }
env_logger = "^0.9"
hex = "0.4"
json = "^0.12"
lazy_static = "1.4"
log = "^0.4"
num = "0.4"
num-traits = "0.2"
regex = "1.5"
thiserror = "^1"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }

[features]
